<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeActivity">

    <include
        layout="@layout/layout_toolbar_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_groupItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_groupOptionsToggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_groupOptionsToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingEnd="@dimen/padding_regular"
            android:paddingStart="@dimen/padding_regular"
            app:layout_constraintBottom_toTopOf="@+id/layout_groupOptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_groupItems">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView_groupOptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/group_hint_group_options"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_size_regular"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerGroupOptionsTitle"
                app:layout_constraintEnd_toStartOf="@+id/button_optionsVisibilityToggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/button_optionsVisibilityToggle"
                style="@style/ActionTextButton"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerGroupOptionsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView_groupOptions"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/group_hint_group_options_hide"/>

            <View
                android:id="@+id/layout_dividerGroupOptionsTitle"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_optionsVisibilityToggle"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_groupOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_groupOptionsToggle">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/button_selectAll"
                style="@style/ActionTextButton.White"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerRaffleOptions"
                app:layout_constraintEnd_toStartOf="@+id/button_deselectAll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/group_hint_group_options_select_all_items"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/button_deselectAll"
                style="@style/ActionTextButton.White"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerRaffleOptions"
                app:layout_constraintEnd_toStartOf="@+id/layout_dividerGroupOptions"
                app:layout_constraintStart_toEndOf="@id/button_selectAll"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/group_hint_group_options_deselect_all_items"/>

            <View
                android:id="@+id/layout_dividerGroupOptions"
                android:layout_width="@dimen/divider_size"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerRaffleOptions"
                app:layout_constraintEnd_toStartOf="@+id/button_share"
                app:layout_constraintStart_toEndOf="@id/button_deselectAll"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/button_share"
                style="@style/ActionTextButton.White"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerRaffleOptions"
                app:layout_constraintEnd_toStartOf="@+id/button_delete"
                app:layout_constraintStart_toEndOf="@id/layout_dividerGroupOptions"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/group_hint_group_options_share"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/button_delete"
                style="@style/ActionTextButton.White"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/layout_dividerRaffleOptions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_share"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/group_hint_group_options_delete"/>

            <View
                android:id="@+id/layout_dividerRaffleOptions"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_size"
                android:layout_marginEnd="@dimen/margin_regular"
                android:layout_marginStart="@dimen/margin_regular"
                android:background="@color/colorDivider"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_raffleModes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_dividerGroupOptions"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_raffleModes"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_raffle_modes_height"
                android:fadeScrollbars="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_dividerRaffleOptions"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>

